package com.laurenci.hydrotrack.core.drink;

import com.laurenci.hydrotrack.core.Repository;

public interface DrinkTypeRepository extends Repository<DrinkType, String> {
}
