package com.laurenci.hydrotrack.core.drink.custom;

import com.laurenci.hydrotrack.core.drink.GeneralDrinkRepository;

public interface CustomDrinkRepository extends GeneralDrinkRepository<CustomDrink> {
}
