package com.laurenci.hydrotrack.core.user;

import com.laurenci.hydrotrack.core.Repository;

public interface UserRepository extends Repository<User, Long> {
}
